# aiagent-microservice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyprojec.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: app.py
tests/: test_app.py
