[tool.poetry]
name = "aiagent-microservice"
version = "0.1.0"
description = "A mock AI agent using FastAPI + LangGraph + Dapr."
authors = ["Jerome Mohanan <2962518+jero2rome@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
langgraph = "^0.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"